--- a/requirements.txt
+++ b/requirements.txt
@@ -132,7 +132,7 @@ tinycss2==1.4.0
 toml==0.10.2
 tornado==6.4.2
 traitlets==5.14.3
-types-python-dateutil
+types-python-dateutil==2.9.0
 typing_extensions==4.12.2
 tzdata==2023.3
 unicodedata2==15.0.0
